Make two text columns in studio Admin header fix on mobile

--- a/assets/css/admin/components/admin-header.styl
+++ b/assets/css/admin/components/admin-header.styl
@@ -28,5 +28,6 @@
         opacity: 0.7
   & + header
     top: 28px
-  & ~ main
-    padding-top: 108px
+  +size($smallScreen)
+    & ~ main
+      padding-top: 108px
