--- a/assets/css/app/views/studio.styl
+++ b/assets/css/app/views/studio.styl
@@ -4,12 +4,17 @@
     margin: 0
     padding: 0
     li
+      margin-bottom: 3em
       img
         max-width: 100%
         display: block
+        margin: 0 auto
       .name
         color: $grayLight
         font-size: (11/$em)
+        text-align: center
+        +size($smallScreen)
+          text-align: left
     +size($smallScreen)
       &::after
         content: ''
@@ -18,12 +23,26 @@
       li
         float: left
         width: 48%
+        margin-bottom: 0
         &:first-child
           margin-right: 4%
   .description
-    max-width: 450px
-    margin: 5em auto
+    margin: 3em auto
     text-align: center
+    max-width: 900px
+    +size($smallScreen)
+      &::after
+        content: ''
+        display: block
+        clear: both
+    .column
+      margin: 2em auto
+      +size($smallScreen)
+        float: left
+        width: 47%
+        &:first-child
+          margin-right: 6%
+
   .tools
     text-align: center
     margin-top: 5em
